REGRESSION(286001@main): [macOS] 3 pdf tests are constant timeout https://bugs.webkit.org/show_bug.cgi?id=282447 rdar://139078186

Reviewed by Wenson Hsieh.

Tests with embedded PDF objects that use the registerPDFTest callback
mechanism now timeout because said callback is never fulfilled (the
plugin dies during render invalidation and throws away the callback when
it does so).

To fix this, we can leverage the corresponding HTMLPlugInElement. Its
lifetime can be treated as an invariant for test purposes, so if a
plugin has any unfulfilled testing callbacks during teardown, we store
said callback on plugin element, and make sure to propagate them back
down to any newly constructed plugin.

* LayoutTests/pdf/annotations/radio-buttons-select-second-expected.html:
* LayoutTests/pdf/annotations/radio-buttons-select-second.html:
* LayoutTests/pdf/two-pages-continuous-to-discrete.html:
  Wait for a stable presentation update after asking for a display mode
  change. This makes the test less flaky.

* Source/WebCore/html/HTMLPlugInElement.cpp:
(WebCore::HTMLPlugInElement::~HTMLPlugInElement):
(WebCore::HTMLPlugInElement::pluginDestroyedWithPendingPDFTestCallback):
(WebCore::HTMLPlugInElement::takePendingPDFTestCallback):
* Source/WebCore/html/HTMLPlugInElement.h:
* Source/WebKit/WebProcess/Plugins/PDF/PDFPluginBase.mm:
(WebKit::PDFPluginBase::~PDFPluginBase):
(WebKit::PDFPluginBase::teardown):
(WebKit::PDFPluginBase::registerPDFTest):
* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::installPDFDocument):
* Source/WebKit/WebProcess/Plugins/PluginView.cpp:

Canonical link: https://commits.webkit.org/286017@main