Source/WebKit/WebProcess/Plugins/PluginView.h
@@ -230,7 +230,7 @@ private:
     Vector<WebCore::FloatRect> pdfAnnotationRectsForTesting() const override;
     void unlockPDFDocumentForTesting(const String& password) final;
     void setPDFTextAnnotationValueForTesting(unsigned pageIndex, unsigned annotationIndex, const String& value) final;
-    void registerPDFTestCallback(RefPtr<WebCore::VoidCallback> &&) final;
+    void registerPDFTestCallback(RefPtr<WebCore::VoidCallback>&&) final;
 };
 
 } // namespace WebKit
